Added comments to fitAlzheimerFD

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import funweightclust as fwc\n",
-    "from fitAlzheimer import fitAlzheimerFD, fitCorpusFD, test_predict\n",
+    "from fitAlzheimer import fitCingulumFD, fitCorpusFD, test_predict\n",
     "import sklearn.metrics as met\n"
    ]
   },
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "data = fitAlzheimerFD()\n",
+    "data = fitCingulumFD()\n",
     "cingulum_x = data['fdx']\n",
     "cingulum_y = data['fdy']\n",
     "cingulum_clm = data['groupd']\n",
